--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,15 +7,17 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    #Can's set execution file under windows OS
-    - name: make execution file
-      run: chmod +x ./gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: make execution file
+        run: chmod +x ./gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
+        env:
+          trelloAppUser: testUser
+          dbTrelloPassword: testPassword
 
 
