--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#Database connection settings
+spring.jpa.database=mysql
 
+#Database connection config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
+#DataBase adress
+spring.datasource.url=jdbc:mysql://mysql26.mydevil.net:3306/m1319_trelloApp?serverTimezone=Europe/Warsaw&useSSL=False
+
+#DataBase connection credentials
+spring.datasource.username=${trelloAppUser}
+spring.datasource.password=${dbTrelloPassword}
