Changes for deploy application on Heroku's servers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-#Database connection settings
-spring.jpa.database=mysql
-
-#Database connection config
+#Changes for Heroku ser
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
 
-#DataBase adress
-spring.datasource.url=jdbc:mysql://mysql26.mydevil.net:3306/m1319_trelloApp?serverTimezone=Europe/Warsaw&useSSL=False
+spring.jpa.database=postgresql
 
-#DataBase connection credentials
-spring.datasource.username=${trelloAppUser}
-spring.datasource.password=${dbTrelloPassword}
+#Using Heroku env
+spring.datasource.url==$(SPRING_DATASOURCE_URL)
+spring.datasource.username=$(SPRING_DATASOURCE_USERNAME)
+spring.datasource.password==$(SPRING_DATASOURCE_PASSWORD)
