Credentials for trello.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,5 +19,7 @@ jobs:
         env:
           trelloAppUser: testUser
           dbTrelloPassword: testPassword
+          trelloTrelloAppKey: testKey
+          trelloTrellAppToken: testAppToken
 
 
