--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.url=jdbc:mysql://mysql26.mydevil.net:3306/m1319_trelloApp?serv
 #DataBase connection credentials
 spring.datasource.username=${trelloAppUser}
 spring.datasource.password=${dbTrelloPassword}
+
+#Trello credentials
+trello.api.endpoint.prod=https://api.trello.com/1
+trello.app.key=${trelloTrelloAppKey}
+trello.app.token=${trelloTrellAppToken}
