Little refactoring (and some tests - for myself)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.datasource.password=${dbTrelloPassword}
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.key=${trelloTrelloAppKey}
 trello.app.token=${trelloTrellAppToken}
+trello.app.username=robertb57
