Develop/heroku next release (#28)
* Credentials for trello.

* Finally - application can serve request to trello servers

* @Autowired by constructor

* Little refactoring
(and some tests - for myself)

* Added support lists from boards

* Added "creating Cards (single tasks) on Trello Board" feature

* Refactoring - moved CreatedTrelloCard.class to correct package

* Added badges in mapped response from Trello server after creating new card

* Some refactoring and preparing to tests (mocks and so on)

* Reformat code with google-code-style (I have to compare with own style)

* Test for trello client getting boards

* Test for trello client creating card

* Test for null from trello client

* Added missing dep. for tests

* Merge local changes to main develop (#26)

* Merging new frontend (#25)

* Changes in frontend for trello functionality.

* Little thing and it makes you happy.

Everything (or almost everything from backend was done). It's time to prepare to next release (with all functionality (trello integration).

* Add trelloapi endpoint (on heroku servers)

* Fix application.properties:
add heroku env for trello credentials
bring back postresql database
add trello api endpoint

* Fix build.gradle
I forgot about postgresql compile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-#Changes for Heroku ser
+#Database connection settings
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.database=postgresql
-
-#Using Heroku env
+#DataBase connection credentials (Using Heroku env)
 spring.datasource.url==$(SPRING_DATASOURCE_URL)
 spring.datasource.username=$(SPRING_DATASOURCE_USERNAME)
 spring.datasource.password==$(SPRING_DATASOURCE_PASSWORD)
+#Trello env for credentials
+trello.app.key=${trelloTrelloAppKey}
+trello.app.token=${trelloTrellAppToken}
+trello.app.username=robertb57
+#Serving trello
+trello.api.endpoint.prod=https://api.trello.com/1
