Prepare to mail sending

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,5 +21,7 @@ jobs:
           dbTrelloPassword: testPassword
           trelloTrelloAppKey: testKey
           trelloTrellAppToken: testAppToken
+          gmailAccountForJava: gmailAccountForJava
+          gmailPasswordForJava: gmailPasswordForJava
 
 
