--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.key=${trelloTrelloAppKey}
 trello.app.token=${trelloTrellAppToken}
 trello.app.username=robertb57
+#Gmail credentials
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${gmailAccountForJava}
+spring.mail.password=${gmailPasswordForJava}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
