--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,5 @@ spring.mail.username=${gmailAccountForJava}
 spring.mail.password=${gmailPasswordForJava}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+#Administation
+admin.mail=trelloDb@skrzynia.ovh
