--- a/build.gradle
+++ b/build.gradle
@@ -22,15 +22,8 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
-
-
-
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    testImplementation('junit:junit:4.13')
-}
-
-test {
-    useJUnitPlatform()
+    testCompile('junit:junit:4.13')
 }
