Prepare to deploy on own mydevil.net server: build.gradle ==>                    add war plugin (application will be deploy on tomcat server)                    add providedRuntime
EmailScheduler ==> set sending an email for every two hours (for tests)
SimpleEmailService ==> add sender information (it is required by mydevil smtp server)
TrelloDbTaskApplication ==> configure application for Tomcat deploy
application.properties ==> add new environment for mailService (from mydevil emails servers)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,17 +11,16 @@ spring.datasource.url=jdbc:mysql://mysql26.mydevil.net:3306/m1319_trelloApp?serv
 #DataBase connection credentials
 spring.datasource.username=${trelloAppUser}
 spring.datasource.password=${dbTrelloPassword}
-
 #Trello credentials
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.key=${trelloTrelloAppKey}
 trello.app.token=${trelloTrellAppToken}
 trello.app.username=robertb57
 #Gmail credentials
-spring.mail.host=smtp.gmail.com
+spring.mail.host=mail26.mydevil.net
 spring.mail.port=587
-spring.mail.username=${gmailAccountForJava}
-spring.mail.password=${gmailPasswordForJava}
+spring.mail.username=${trelloMailService_sender}
+spring.mail.password=${trelloMailService_password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #Administation
