--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
     id "io.freefair.lombok" version "4.1.6"
+    id 'war'
 }
 
 group = 'pl.com.bohdziewicz'
@@ -22,6 +23,7 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.2.6.RELEASE'
+    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
